--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ps4-shadow-zone-backend",
+  "name": "ps4-shadowzone-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "servidor.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node servidor.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
