--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "ps4-shadowzone-backend",
   "version": "1.0.0",
+  "description": "",
   "main": "servidor.js",
   "scripts": {
     "start": "node servidor.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "mongoose": "^7.6.3"
   }
 }
