--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "ps4-shadowzone-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend para el contador de descargas de PS4 Shadow Zone",
   "main": "servidor.js",
   "scripts": {
     "start": "node servidor.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.3"
   }
 }
+
