--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend para el contador de descargas de PS4 Shadow Zone",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
