--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "ps4-shadow-zone-backend",
+  "name": "ps4-shadowzone-backend",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "express": "^4.18.2"
   }
 }
+
