--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ps4-shadowzone-backend",
   "version": "1.0.0",
-  "description": "Backend para PS4 Shadowzone",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "jsonwebtoken": "^9.0.0"
   }
 }
